:art: New styled comps and z-index fixed

--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,9 +1,8 @@
 .leaflet-container {
-  border: 3px solid #000;
   height: 70vh;
   width: 100%;
 }
 
-.main-container {
-  padding: 5px;
+.leaflet-top {
+  z-index: 999;
 }
